--- a/JS Back-End/Cat Shelter/views/addCat.html
+++ b/JS Back-End/Cat Shelter/views/addCat.html
@@ -1,4 +1,5 @@
-<form method="POST" class="cat-form" enctype="multipart/form-data">
+<!-- <form method="POST" class="cat-form" enctype="multipart/form-data"> -->
+    <form method="POST" class="cat-form">
     <h2>Add Cat</h2>
     <label for="name">Name</label>
     <input name="name" type="text" id="name">
