--- a/React JS/Final Project - Quiz System/client/src/index.css
+++ b/React JS/Final Project - Quiz System/client/src/index.css
@@ -12,7 +12,6 @@
   font-size: 18px;
   line-height: 1.5;
   font-weight: 400;
-  background-color: var(--grey);
 }
 
 body {
@@ -28,9 +27,8 @@ header {
 
 main {
   max-width: 1400px;
-  min-height: 900px;
+  /* min-height: 900px; */
   margin: 0 auto;
-  background-color: var(--yellow);
 }
 
 h1 {
