--- a/React JS/Final Project - Quiz System/client/src/index.css
+++ b/React JS/Final Project - Quiz System/client/src/index.css
@@ -5,7 +5,9 @@
   --black: #213547;
   --blue: #2B6980;
   --yellow: #B49206;
+  --redOpc: #A6372B55;
   --red: #A6372B;
+  --greenOpc: #3D883211;
   --green: #3D8832;
 
   font-family: "Open Sans";
@@ -27,17 +29,63 @@ header {
 
 main {
   max-width: 1400px;
-  /* min-height: 900px; */
   margin: 0 auto;
 }
 
 h1 {
-  font-size: 3.2em;
+  display: block;
+  font-size: 2.2em;
   line-height: 1.1;
-  margin: 0;
+  margin: 0.67em 0;
+  font-weight: bold;
+  color: var(--black);
 }
 
-button {
+h2 {
+  display: block;
+  font-size: 1.7em;
+  line-height: 1.1;
+  margin: 0.83em 0 0;
+  font-weight: bold;
+  color: var(--black);
+}
+
+h3 {
+  display: block;
+  font-size: 1.37em;
+  line-height: 1.1;
+  margin: 1em 0;
+  font-weight: bold;
+  color: var(--black);
+}
+
+h4 {
+  display: block;
+  font-size: 1em;
+  line-height: 1.3;
+  margin: 1.33em 0;
+  font-weight: bold;
+}
+
+h5 {
+  display: block;
+  font-size: 1.03em;
+  line-height: 1.1;
+  margin: 1.67em 0;
+  font-weight: bold;
+}
+
+h6 {
+  display: block;
+  font-size: .87em;
+  line-height: 1.1;
+  margin: 2.33em 0;
+  font-weight: bold;
+}
+
+
+
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -54,5 +102,5 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
